[gd_scene load_steps=5 format=3 uid="uid://b0vky1bkocb4c"]

[ext_resource type="Script" path="res://saintholyscripts/pause.gd" id="1_ybs5t"]
[ext_resource type="Texture2D" uid="uid://bc4egl0lcs1jh" path="res://assets/sprites/Menu_De_Pause_Only.png" id="2_4kbkg"]
[ext_resource type="FontFile" uid="uid://dxbupxvjecbd4" path="res://assets/fonts/Source_Code_Pro/static/SourceCodePro-Regular.ttf" id="2_08lll"]

[sub_resource type="ViewportTexture" id="ViewportTexture_1kdpx"]

[node name="Pause" type="Control"]
process_mode = 3
top_level = true
z_index = 5
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.13, 0.13)
script = ExtResource("1_ybs5t")

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.455
anchor_top = 0.5
anchor_right = 0.455
anchor_bottom = 0.5
offset_left = -1169.6
offset_top = -1042.0
offset_right = 132.4
offset_bottom = 398.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.701373, 0.701373)
texture = ExtResource("2_4kbkg")

[node name="Settings" type="Button" parent="."]
texture_filter = 4
layout_mode = 0
offset_left = -58.0
offset_top = -103.0
offset_right = 254.0
offset_bottom = 13.0
theme_override_colors/font_color = Color(0.717647, 0.807843, 0.764706, 1)
theme_override_fonts/font = ExtResource("2_08lll")
theme_override_font_sizes/font_size = 45
text = "settings"

[node name="MainMenu" type="Button" parent="."]
texture_filter = 4
layout_mode = 0
offset_left = -58.0
offset_top = 36.0
offset_right = 254.0
offset_bottom = 138.0
theme_override_colors/font_color = Color(0.717647, 0.807843, 0.764706, 1)
theme_override_fonts/font = ExtResource("2_08lll")
theme_override_font_sizes/font_size = 45
text = "main menu"

[node name="Back" type="Button" parent="."]
texture_filter = 4
layout_mode = 0
offset_left = -58.0
offset_top = 158.0
offset_right = 254.0
offset_bottom = 260.0
theme_override_colors/font_color = Color(0.717647, 0.807843, 0.764706, 1)
theme_override_fonts/font = ExtResource("2_08lll")
theme_override_font_sizes/font_size = 45
text = "back"

[node name="PauseText" type="RichTextLabel" parent="."]
texture_filter = 4
layout_mode = 0
offset_left = -58.0
offset_top = -232.0
offset_right = 267.0
offset_bottom = -158.0
theme_override_colors/default_color = Color(0.717647, 0.807843, 0.764706, 1)
theme_override_fonts/normal_font = ExtResource("2_08lll")
theme_override_font_sizes/normal_font_size = 55
text = "//pause//"

[node name="WarningPopUp" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_left = -830.0
offset_top = -510.0
offset_right = -790.0
offset_bottom = -470.0

[node name="Warning" type="Control" parent="WarningPopUp"]
z_index = 99
anchors_preset = 0
offset_left = 26.0
offset_top = -147.0
offset_right = 798.0
offset_bottom = 131.0

[node name="GoToMenuWarningTxt" type="RichTextLabel" parent="WarningPopUp/Warning"]
z_index = 99
texture_filter = 4
layout_mode = 0
offset_left = 565.0
offset_top = 452.0
offset_right = 1259.0
offset_bottom = 614.0
theme_override_colors/default_color = Color(0.717647, 0.807843, 0.764706, 1)
theme_override_fonts/normal_font = ExtResource("2_08lll")
theme_override_font_sizes/normal_font_size = 55
text = "Você tem certeza que deseja ir para menu?"
text_direction = 1

[node name="Background" type="TextureRect" parent="WarningPopUp/Warning"]
modulate = Color(0, 0, 0, 0.458824)
z_index = 98
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 550.0
offset_top = 407.0
offset_right = 479.0
offset_bottom = 370.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("ViewportTexture_1kdpx")

[node name="YesBackMenu" type="Button" parent="WarningPopUp"]
texture_filter = 4
layout_mode = 0
offset_left = 576.0
offset_top = 598.0
offset_right = 888.0
offset_bottom = 700.0
theme_override_colors/font_color = Color(0.717647, 0.807843, 0.764706, 1)
theme_override_fonts/font = ExtResource("2_08lll")
theme_override_font_sizes/font_size = 45
text = "Sim"

[node name="NoBackMenu" type="Button" parent="WarningPopUp"]
texture_filter = 4
layout_mode = 0
offset_left = 965.0
offset_top = 598.0
offset_right = 1277.0
offset_bottom = 700.0
theme_override_colors/font_color = Color(0.717647, 0.807843, 0.764706, 1)
theme_override_fonts/font = ExtResource("2_08lll")
theme_override_font_sizes/font_size = 45
text = "Não"

[connection signal="pressed" from="Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="WarningPopUp/YesBackMenu" to="." method="_on_yes_back_menu_pressed"]
[connection signal="pressed" from="WarningPopUp/NoBackMenu" to="." method="_on_no_back_menu_pressed"]
